[package]
name = "modbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14.27", features = ["server", "http1", "tcp"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
dotenv = "0.15.0"
async-oauth2 = "0.4.2"
reqwest = { version = "0.11.20", features = ["json"] }
lazy_static = "1.4"
url = "2.2"
